# PC2_A3

./: CMakeLists.txt  MoviePlaiter.depend  MoviePlaiter.layout  main.cpp  notes.txt
Model/: Movie.cpp  Movie.h  MovieLibrary.cpp  MovieLibrary.h  MovieNode.cpp  MovieNode.h  MoviePlaitedList.cpp  MoviePlaitedList.h
Utils/: Utils.cpp  Utils.h
View/: AddMovieWindow.cpp  AddMovieWindow.h  DeleteMovieWindow.cpp  DeleteMovieWindow.h  MovieLibraryWindow.cpp  MovieLibraryWindow.h  OKCancelWindow.cpp  OKCancelWindow.h
